--- a/src/index.css
+++ b/src/index.css
@@ -99,3 +99,12 @@ button {
 .icon--delete {
   background-image: url("/icons/delete.svg");
 }
+
+.map{
+  width: 100%;
+  height: 398px;
+}
+
+.ol-viewport:first-of-type {
+  display: none;
+}
